# dioxus-editor

./: AGENTS.md  CHANGES_SUMMARY.md  Cargo.toml  Dioxus.toml  PLAN.md  README.md  TESTING.md  TEST_SPEC.md  TODO.md  VISUAL_GUIDE.md
.github/workflows/: ci.yml  pages.yml
assets/: style.css
docs/: outliner_spec.md  outliner_test.md
docs/dev/: 01-setup.md  02-init.md  03-model-and-lines.md  04-basic-editing.md  05-folding-and-visibility.md  06-line-movement-and-structure-ops.md  07-notation-inline.md  08-blocks-links-media.md  09-undo-tree-and-history.md  10-shortcuts-ime-and-edge-case.md  11-testing-plan.md  selection.md
docs/test/: test-plan.md
public/: index.html
src/: main.rs  model.rs  outliner.rs
