[package]
name = "dioxus-editor"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { version = "0.7", features = ["web"] }
uuid = { version = "1", features = ["v4", "js"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Event", "HtmlInputElement", "HtmlTextAreaElement"] }
